@@ -2,6 +2,7 @@
 Version: 0.1.26
 Date: ????
   Changes:
+    - New calculation of quality module bonuses (supports quality bonus over 100%)
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.25
 Date: 2024-01-16
